# hello_dioxus

./: .gitignore  Cargo.toml  README.md  index.html
src/: components.rs  main.rs
src/components/: bbs.rs  counter.rs  entry.rs  home.rs
static/: counter.scss  entry.scss  main.scss  style.scss
style/: bbs.scss  entry.scss  home.scss
