[package]
name = "hello_dioxus"
version = "0.1.0"
authors = ["Daiki Nakashima <daiki48.engineer@gmail.com>"]
keywords = ["dioxus"]
license = "MIT"
edition = "2021"

readme = "README.md"

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
dioxus-free-icons = { version = "0.5.1", features = ["font-awesome-brands"] }
dioxus-router = "0.2.3"
